@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1 2019/08/13 02:16:09 brook Exp $
+
+DISTNAME=	chemfig.doc
+PKGNAME=	tex-${DISTNAME:S/./-/}-1.41
+TEXLIVE_REV=	51176
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/chemfig
+COMMENT=	Documentation for tex-chemfig
+LICENSE=	lppl-1.3c
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
