@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:16:09 brook Exp $
+
+SHA1 (tex-chemfig-51176/chemfig.doc.tar.xz) = 3b6182b156f0e9e159baee08f34c51a7716beb3f
+RMD160 (tex-chemfig-51176/chemfig.doc.tar.xz) = 241413d4607d6277247fa6f7ccbe6c5ebab58861
+SHA512 (tex-chemfig-51176/chemfig.doc.tar.xz) = 61027d844de25043317e4eba23fd3003296fd0fad7ea9495f6b809c0a8b5cc055deb0798259bc6de09ed2a1e462b8aa9c226d5482c9642e87ae6c0de3787db47
+Size (tex-chemfig-51176/chemfig.doc.tar.xz) = 2075596 bytes
